5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1675_2189.log
== TEST (2019-04-30 11:40:47) 
-- CODE:
n = input()
if n[0].upper()>=A and n[0].upper()<=K:
	print(n,"vai para a sala 101")
if n[0].upper()>=L and n[0].upper()<=N:
	print(n,"vai para a sala 102")
if n[0].upper()>=O and n[0].upper()<=Z:
	print(n,"vai para a sala 103")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if n[0].upper()>=A and n[0].upper()<=K:
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:41:23) 
-- CODE:
n = input()
if n[0].upper()>="A" and n[0].upper()<="K":
	print(n,"vai para a sala 101")
if n[0].upper()>="L" and n[0].upper()<="N":
	print(n,"vai para a sala 102")
if n[0].upper()>="O" and n[0].upper()<="Z":
	print(n,"vai para a sala 103")
-- OUTPUT:
Maria vai para a sala 102
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:41:30) 
-- CODE:
n = input()
if n[0].upper()>="A" and n[0].upper()<="K":
	print(n,"vai para a sala 101")
if n[0].upper()>="L" and n[0].upper()<="N":
	print(n,"vai para a sala 102")
if n[0].upper()>="O" and n[0].upper()<="Z":
	print(n,"vai para a sala 103")
-- OUTPUT:
Maria vai para a sala 102
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:41:35) 
-- CODE:
n = input()
if n[0].upper()>="A" and n[0].upper()<="K":
	print(n,"vai para a sala 101")
if n[0].upper()>="L" and n[0].upper()<="N":
	print(n,"vai para a sala 102")
if n[0].upper()>="O" and n[0].upper()<="Z":
	print(n,"vai para a sala 103")
-- OUTPUT:
Maria vai para a sala 102
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:41:45) 
-- CODE:
n = input()
if n[0].upper()>="A" and n[0].upper()<="K":
	print(n,"vai para a sala 101")
if n[0].upper()>="L" and n[0].upper()<="N":
	print(n,"vai para a sala 102")
if n[0].upper()>="O" and n[0].upper()<="Z":
	print(n,"vai para a sala 103")
-- OUTPUT:
Maria vai para a sala 102
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:41:49) 
-- CODE:
n = input()
if n[0].upper()>="A" and n[0].upper()<="K":
	print(n,"vai para a sala 101")
if n[0].upper()>="L" and n[0].upper()<="N":
	print(n,"vai para a sala 102")
if n[0].upper()>="O" and n[0].upper()<="Z":
	print(n,"vai para a sala 103")
-- EXECUTION TIME:
0.19056
-- TEST CASE 1:
---- input:
Maria
---- correct output:
Maria vai para a sala 102
---- user output:
Maria vai para a sala 102
-- TEST CASE 2:
---- input:
Jose
---- correct output:
Jose vai para a sala 101
---- user output:
Jose vai para a sala 101
-- TEST CASE 3:
---- input:
Zenilda
---- correct output:
Zenilda vai para a sala 103
---- user output:
Zenilda vai para a sala 103
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
